--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="synonym">#999999</color>
     <color name="name">#222222</color>
     <color name="whiteBackground">#FFFFFF</color>
+    <color name="drawer_background">#111</color>
 </resources>
