--- a/app/src/main/res/layout/fragment_name_search.xml
+++ b/app/src/main/res/layout/fragment_name_search.xml
@@ -8,6 +8,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
         tools:context="co.edu.utb.androidgeneticsyndromecatalog.MainActivity">
 
 
@@ -30,8 +31,14 @@
             android:id='@+id/syndrome_recycler_view'
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/search_box"
-            android:scrollbars="vertical" />
+            android:layout_below="@id/search_box" />
+
+        <com.futuremind.recyclerviewfastscroll.FastScroller
+            android:id="@+id/fastscroll"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"/>
     </RelativeLayout>
 
 
